fix(overview): i#2635 fix broken layout on overview with invitation

--- a/javascript/apps/taiga/src/app/modules/project/feature-shell/project-feature-shell.component.css
+++ b/javascript/apps/taiga/src/app/modules/project/feature-shell/project-feature-shell.component.css
@@ -57,3 +57,8 @@ Copyright (c) 2021-present Kaleidos Ventures SL
     min-inline-size: 180px;
   }
 }
+
+.project-main {
+  display: flex;
+  flex-direction: column;
+}
